--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -107,6 +107,9 @@
 
             <a href="#" class="forgot-password">Esqueceu a senha?</a>
         </form>
+        <br />
+        <hr />
+        <a th:href="@{/oauth2/authorization/google} "> Entrar Com Google</a>
     </div>
 </body>
 
